--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 body {
   font-size: 20px;
   font-family: sans-serif;
-  color: lightgreen;
+  color: #62acdd;
+  background-color: whitesmoke;
 }
 .question {
   font-weight: 600;
@@ -9,18 +10,22 @@ body {
 .answers {
   margin-bottom: 20px;
   display: block;
+  color: black;
 }
 #submit {
-  font-family: sans-serif;
-  font-size: 20px;
   background-color: #297;
-  color: #fff;
+  color: black;
   border: 0px;
   border-radius: 3px;
   padding: 20px;
   cursor: pointer;
+  font-size: 20px;
+  font-family: sans-serif;
   margin-bottom: 20px;
 }
 #submit:hover {
   background-color: #3a8;
+}
+label {
+  display: block;
 }
